# src/powercontext/server/authz/__init__.py
@@ -28,6 +28,7 @@ from powercontext.server.authz.errors import (
 from powercontext.server.authz.models import (
     DEFAULT_DEPLOYMENT_ID,
     PUBLIC_ACCESS_ACTIONS,
+    ROLE_CARDINALITIES,
     AccessAction,
     AccessAuditEvent,
     AccessBinding,
@@ -35,6 +36,7 @@ from powercontext.server.authz.models import (
     AccessDecision,
     AccessResourceType,
     AccessRole,
+    AccessRoleCardinality,
     AccessSubjectRef,
     ArtifactIdentity,
     ArtifactOwnerRelation,
@@ -56,14 +58,14 @@ from powercontext.server.authz.service import (
     AuthorizationProvider,
     AuthorizedResourceFilter,
     AuthorizedResourcePage,
+    BindingReplacement,
     BindingSearchRequest,
     BuiltinAuthorizationProvider,
     CreateBinding,
-    HandoffReceiverReassignment,
-    ReassignHandoffReceiver,
     RelationshipReader,
     RelationshipStore,
     RelationshipWriter,
+    ReplaceBinding,
     ResourceSearchRequest,
     access_control_for_mode,
 )
@@ -71,6 +73,7 @@ from powercontext.server.authz.service import (
 __all__ = (
     "DEFAULT_DEPLOYMENT_ID",
     "PUBLIC_ACCESS_ACTIONS",
+    "ROLE_CARDINALITIES",
     "AccessAction",
     "AccessAuditContext",
     "AccessAuditEvent",
@@ -91,6 +94,7 @@ __all__ = (
     "AccessRequest",
     "AccessResourceType",
     "AccessRole",
+    "AccessRoleCardinality",
     "AccessSubjectRef",
     "AccessUnavailableError",
     "ArtifactIdentity",
@@ -100,19 +104,19 @@ __all__ = (
     "AuthorizationProvider",
     "AuthorizedResourceFilter",
     "AuthorizedResourcePage",
+    "BindingReplacement",
     "BindingSearchRequest",
     "BuiltinAuthorizationProvider",
     "CandidateOwnerAttestation",
     "CasbinAuthorizationProvider",
     "CreateBinding",
     "GroupRef",
-    "HandoffReceiverReassignment",
     "MemoryEntrySelector",
     "PrincipalRef",
-    "ReassignHandoffReceiver",
     "RelationshipReader",
     "RelationshipStore",
     "RelationshipWriter",
+    "ReplaceBinding",
     "ResourceRef",
     "ResourceSearchRequest",
     "access_control_for_mode",
